MFC r363995

em(4): honor vlanhwtag offload

The FreeBSD em driver fails to properly reset the VME flag
in the e1000 CTRL register oneg the following ifconfig command

    ifconfig em1 -vlanhwtag

Tested on the e1000 device emulated by QEMU, and on a real
NIC (chip=0x10d38086).

PR:     236584
Submitted by:    murat@sunnyvalley.io
Reported by:     murat@sunnyvalley.io
Differential Revision:  https://reviews.freebsd.org/D25286